src/objects/Contact_Report__c.object
<CustomObject>
    <description>T-476855</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>T-476856</description>
        <inlineHelpText>Household or Organization</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contact Reports</relationshipLabel>
        <relationshipName>Contact_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>T-476856</description>
        <label>Author</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Contact Reports</relationshipLabel>
        <relationshipName>Contact_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>T-476856</description>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Reports (Contact2)</relationshipLabel>
        <relationshipName>Contact_Reports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>T-476861</description>
        <label>Contact Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>T-476856</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Reports</relationshipLabel>
        <relationshipName>Contact_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <description>T-476856</description>
        <label>Executive Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interested_In_Planned_Giving__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested In Planned Giving?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCD_Comments_EN__c</fullName>
        <description>Encrypted comments visible to MCD profile</description>
        <label>MCD Comments (EN)</label>
        <length>150</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>MCD_Notes__c</fullName>
        <description>T-480587 POC for MCD FLS</description>
        <label>MCD Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Narrative__c</fullName>
        <description>T-476856</description>
        <label>Narrative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prospect_Change_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prospect Change Request?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospect_Relationship_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prospect Relationship Change?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <description>T-476856</description>
        <label>Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney for Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine Article/Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reassign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reassign?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Research_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Research Items?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Significant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>T-476856</description>
        <label>Significant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>T-476856</description>
        <inlineHelpText>Enter the descriptive subject of the interaction</inlineHelpText>
        <label>Subject</label>
        <length>144</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tone__c</fullName>
        <description>T-476856</description>
        <label>Tone</label>
        <picklist>
            <picklistValues>
                <fullName>Neutral</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disappointed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>T-476856</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-person visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other contact type (text, IM, etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-person contact at a group event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up Planned Giving Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Planned Giving Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Planned Giving Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Interest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Volunteer Interest?</label>
        <type>Checkbox</type>
    </fields>
    <label>Contact Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Author__c</columns>
        <columns>Significant__c</columns>
        <columns>Complete__c</columns>
        <columns>Executive_Summary__c</columns>
        <columns>Purpose__c</columns>
        <columns>Tone__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact_Report__c.CR_OOD_User</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000000}</displayFormat>
        <label>Contact Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Reports</pluralLabel>
    <recordTypes>
        <fullName>CR_OOD_User</fullName>
        <active>true</active>
        <description>T-476860  Create CR Team Record type to allow for future security</description>
        <label>CR OOD User</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>